# organist_bot

./: .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION_SMOKE_TEST.md  CLAUDE.md  Makefile  README.md  gigs.log.1  gigs.log.3  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  supervisord.conf  technical-report.html  telegram_bot.py
.claude/: settings.json
.claude/hooks/: post_edit_lint.py  post_pr_created.py  (+5 more)
.githooks/: pre-commit  pre-push
organist_bot/: alert.py  analytics.py  application_store.py  atomic_store.py  config.py  filter_store.py  filter_suspension_store.py  filters.py  invoice_monitor.py  logging_config.py  models.py  notifier.py  parsing.py  reply_monitor.py  runtime_config_store.py  scraper.py  storage.py  travel.py  weekly_summary.py
scripts/: auto_deploy.py  auto_deploy.sh  install-launchagent.sh  rotate_logs.sh  run-scraper.sh  run-telegram-bot.sh  setup_gmail_auth.py  ship.sh  smoke_render_invoice.py
tests/: conftest.py  test_agent_state.py  test_alert.py  test_analytics.py  test_application_store.py  test_atomic_store.py  test_auto_deploy.py  test_calendar_client.py  test_dry_run.py  test_filter_store.py  test_filter_suspension_store.py  test_filters.py  test_gig_agent.py  test_gmail_client.py  test_invoice_generator_browser.py  test_invoice_generator_schema.py  test_invoice_monitor.py  test_logging_config.py  test_main.py  test_models.py  test_notifier.py  test_reply_monitor.py  test_runtime_config_store.py  test_scraper.py  test_sheets_logger.py  test_storage.py  test_telegram_integration.py  test_travel.py  test_unified_agent.py  test_weekly_summary.py
(+53 files in other folders)
